# assignment-_db

./: README.md  pyproject.toml
danbi/: asgi.py  settings.py  urls.py  wsgi.py
routine/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
routine/migrations/: 0001_initial.py  0002_alter_routine_account_id_alter_routineday_routine_id_and_more.py  0002_alter_routine_category.py  0003_alter_routine_category.py
routine/tests/: test_routine_api.py  test_routine_servive.py
tests/: test_assignment_db.py
user/: models.py  serializers.py  service.py  services.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_email.py
user/tests/: test_user_api.py  test_user_service.py
